<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    >
    <!--头部开始-->
    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#E71F19"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/back"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/back"
            android:layout_height="25dp"
            android:layout_width="25dp"
            />
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>
    <!--头部结束-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:text="@string/login_phone"
                android:layout_width="80dp"
                android:gravity="end|center_vertical"
                android:layout_marginRight="15dp"
                android:textSize="14dp"
                android:layout_height="match_parent" />
            <EditText
                android:inputType="phone"
                android:background="@color/white"
                android:layout_width="220dp"
                android:hint="请输入手机号"
                android:textSize="14dp"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <TextView
            android:layout_marginLeft="20dp"
            android:background="#f5f5f5"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:gravity="start"
            android:paddingRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:gravity="end|center_vertical"
                android:text="@string/login_pass"
                android:layout_width="80dp"
                android:layout_marginRight="15dp"
                android:layout_height="match_parent" />
            <EditText
                android:background="@color/white"
                android:inputType="textPassword"
                android:hint="请输入密码"
                android:layout_width="220dp"
                android:textSize="14dp"
                android:layout_marginRight="15dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:layout_marginLeft="20dp"
            android:background="#f5f5f5"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="60dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:background="#E71F19"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:layout_height="40dp" />

        <TextView
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_nobody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
