<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        android:orientation="vertical"

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:background="#ffffff"
            android:layout_alignParentBottom="true"
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <LinearLayout
                android:id="@+id/home_layout"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/home_bg"
                    android:layout_gravity="center"
                    android:background="@mipmap/home_fill"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    />
                <TextView
                    android:id="@+id/home_text"
                    android:text="@string/home"
                    android:layout_gravity="center"
                    android:textColor="#E71F19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/cart_layout"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/cart_bg"
                    android:layout_gravity="center"
                    android:background="@mipmap/cart"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    />
                <TextView
                    android:id="@+id/cart_text"
                    android:text="@string/cart"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:id="@+id/brand_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/brand_bg"
                    android:layout_gravity="center"
                    android:background="@mipmap/sale"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    />
                <TextView
                    android:id="@+id/brand_text"
                    android:text="@string/brand"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:id="@+id/user_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/user_bg"
                    android:layout_gravity="center"
                    android:background="@mipmap/user"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    />
                <TextView
                    android:id="@+id/user_text"
                    android:text="@string/user"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_above="@+id/footer"
            android:background="#909090"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            />

    </RelativeLayout>

