<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    >
    <!--头部开始-->
    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#E71F19"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/scan"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/scan"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/share"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
    </RelativeLayout>
    <!--头部结束-->

    <ScrollView
        android:layout_marginTop="45dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.youth.banner.Banner
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/banner"
                app:indicator_width="15dp"
                app:indicator_margin="5dp"
                app:indicator_height="15dp"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
            <TextView
                android:background="#f3f3f3"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <!--搜索部分-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_marginTop="15dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="50dp">
                    <EditText
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:layout_weight="1"
                        android:layout_width="200dp"
                        android:layout_height="40dp" />
                    <TextView
                        android:layout_gravity="center"
                        android:background="@mipmap/icosousuo"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>
                <TableLayout
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:gravity="center">
                    <TableRow>
                        <LinearLayout
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_gravity="center"
                                android:background="@mipmap/dj"
                                android:layout_width="60dp"
                                android:layout_height="60dp" />
                            <TextView
                                android:layout_gravity="center"
                                android:text="@string/dj"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_gravity="center"
                                android:background="@mipmap/yinyue"
                                android:layout_width="60dp"
                                android:layout_height="60dp" />
                            <TextView
                                android:layout_gravity="center"
                                android:text="@string/yinyue"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_gravity="center"
                                android:background="@mipmap/huatong"
                                android:layout_width="60dp"
                                android:layout_height="60dp" />
                            <TextView
                                android:layout_gravity="center"
                                android:text="@string/huatong"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_gravity="center"
                                android:background="@mipmap/yingdie"
                                android:layout_width="60dp"
                                android:layout_height="60dp" />
                            <TextView
                                android:layout_gravity="center"
                                android:text="@string/yingdie"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </TableRow>
                    <TableRow
                        android:layout_marginTop="10dp"
                        >
                        <LinearLayout
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_gravity="center"
                                android:background="@mipmap/zhoubian"
                                android:layout_width="60dp"
                                android:layout_height="60dp" />
                            <TextView
                                android:layout_gravity="center"
                                android:text="@string/zhoubian"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_gravity="center"
                                android:background="@mipmap/gongfang"
                                android:layout_width="60dp"
                                android:layout_height="60dp" />
                            <TextView
                                android:layout_gravity="center"
                                android:text="@string/gongfang"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_gravity="center"
                                android:background="@mipmap/yinxiang"
                                android:layout_width="60dp"
                                android:layout_height="60dp" />
                            <TextView
                                android:layout_gravity="center"
                                android:text="@string/yinxiang"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_gravity="center"
                                android:background="@mipmap/yingyuan"
                                android:layout_width="60dp"
                                android:layout_height="60dp" />
                            <TextView
                                android:layout_gravity="center"
                                android:text="@string/yingyuan"
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            <!--搜索部分结束-->
            <TextView
                android:background="#f3f3f3"
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <!--限时抢购部分开始-->

            <!--限时抢购部分结束-->
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
